# site-scanning-engine

./: .cfignore  .dockerignore  .env.example  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .mega-linter.yml  AGENTS.md  README.md  accessibilityResults.json  apt.yml  cloudgov-deploy.sh  cloudgov-run-ingest.sh  deploy-cloudgov.sh  docker-compose.yml  eslint.config.mjs  manifest-dev.yml  manifest-prod.yml  manifest.yml  nest-cli.json  out.txt  package-lock.json  package.json  run-ingest-cloud-gov.sh  sample.env  setup_node_environment.sh  site_scanner_endpoint_test.bash  tsconfig.json  vars-dev.yml  vars-prod.yml  vars.yml
.github/: requeue-stale-scans.yml
.github/workflows/: clear-queue.yml  codeql.yml  create-a11y-snapshot.yml  create-daily-snapshots.yml  create-snapshot.yml  deploy.yml  dev.yml  enqueue-limited-scans.yml  enqueue-scans.yml  enqueue-site.yml  ingest.yml  (+11 more)
docs/: deployment.md  development.md  environment_provisioning.md  layout.md
docs/architecture/: .gitignore  README.md  architecture.py  pyproject.toml
docs/architecture/diagrams/: architecture-aws.py  architecture-cloud-gov.py
dtos/: README.md
entities/: core-result.entity.spec.ts  core-result.entity.ts  scan-data.entity.ts  scan-page.entity.ts  scan-status.spec.ts  scan-status.ts  solutions-result.entity.ts  uswds-result.entity.ts  website.entity.ts
libs/: scanner.interface.ts
notebooks/: README.md  scan-date-analysis.ipynb  scan-result-quantity-analysis.ipynb
scripts/: cloudgov-deploy.sh  s3-list.sh  setup_node_environment.sh  site_scanner_endpoint_test.bash
test/: jest.setup.ts
(+319 files in other folders)
