[tool.poetry]
name = "architecture"
version = "0.1.0"
description = "A small python project for generating architecture diagrams."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
diagrams = "^0.17.0"

[tool.poetry.dev-dependencies]
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
